# wxpatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  LICENSE  README.md  SPEC.md  TODO.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/make-todo/: SKILL.md
.claude/skills/ralph-singleton/: SKILL.md
.claude/skills/run-unit-tests/: SKILL.md
.claude/skills/todo-audit/: SKILL.md
context/agent/: claude.md
docs/: weather_imputation_dev_plan_v2.md
notebooks/: 01_station_exploration.py  02_gap_analysis.py
src/: combine_datasets.py  config.py  csv_merger.py  downloader.py  file_io.py  ghcnh_downloader.py  main.py  metadata_manager.py  processor_core.py  repair_stations.py  update_dataset.py  utils.py  verification.py
src/scripts/: clean_metadata.py  compute_metadata.py  evaluate.py  ghcnh_downloader.py  preprocess.py
src/weather_imputation/: __init__.py
src/weather_imputation/config/: __init__.py  base.py  data.py  download.py  evaluation.py  model.py  paths.py  training.py
src/weather_imputation/data/: __init__.py  cleaning.py  dataset.py  ghcnh_loader.py  masking.py  metadata.py  normalization.py  splits.py  stats.py
src/weather_imputation/evaluation/: __init__.py  metrics.py  statistical.py  stratified.py
src/weather_imputation/models/: __init__.py  base.py
src/weather_imputation/models/classical/: __init__.py  linear.py  mice.py  spline.py
src/weather_imputation/training/: __init__.py  callbacks.py  checkpoint.py  trainer.py
src/weather_imputation/utils/: __init__.py  circular.py  filesystem.py  parsing.py  progress.py  reproducibility.py  system.py
tests/: test_base_imputer.py  test_circular.py  test_config.py  test_dataset.py  test_evaluate_script.py  test_ghcnh_loader.py  test_masking.py  test_metrics.py  test_models.py  test_normalization.py  test_preprocess_script.py  test_reproducibility.py  test_splits.py  test_stratified.py
