[project]
name = "weather-imputation"
version = "0.1.0"
description = "Weather data imputation research using GHCNh hourly observations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
notebooks = [
    "marimo>=0.7.0",
    "plotly>=5.18.0",
    "folium>=0.15.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_imputation"]
